# realTimePlot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-macOs.sh  build.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotarea.cpp  plotarea.h  pointstream.cpp  pointstream.h  realTimePlot.pro  run-sample.sh
QCustomPlot/: plotarea.cpp  plotarea.h  plotarea.ui
app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/ui/: signalsourceselectdialog.cpp  signalsourceselectdialog.h  signalsourceselectdialog.ui
lib/: CMakeLists.txt
lib/realtimeplot/: CMakeLists.txt  plotarea.cpp  plotarea.h  pointstream.cpp  pointstream.h
lib/signal/: CMakeLists.txt
realtimeplot/: plotarea.cpp  plotarea.h  plotarea.ui  pointstream.cpp  pointstream.h
sample/: CMakeLists.txt
scripts/: update-example-gif.sh
